Duplicated previews for Matcaps and HDRI's if config folder is present #58104

Closed
opened 2018-11-28 04:33:27 +01:00 by Jonas Pilo · 13 comments

System Information
Windows 10 x64, AMD Radeon R9 390

Blender Version
Broken: Every 2.8 version
Worked: (optional)

Short description of error
When the user creates a config folder in the root folder containing Blender 2.8 all of the matcap and world preview images show up as duplicates.
386c0d0fc6d578ac4cb939554cf83625d4d4f997.JPG

Exact steps for others to reproduce the error
Extract Blender 2.8 (any version) to a folder on your computer -> Create a "config" folder inside the "2.80" folder as you would when creating a portable version of Blender -> Start Blender and open up the shading window in the 3D view and select a matcap/studio

**System Information** Windows 10 x64, AMD Radeon R9 390 **Blender Version** Broken: Every 2.8 version Worked: (optional) **Short description of error** When the user creates a config folder in the root folder containing Blender 2.8 all of the matcap and world preview images show up as duplicates. ![386c0d0fc6d578ac4cb939554cf83625d4d4f997.JPG](https://archive.blender.org/developer/F5740806/386c0d0fc6d578ac4cb939554cf83625d4d4f997.JPG) **Exact steps for others to reproduce the error** Extract Blender 2.8 (any version) to a folder on your computer -> Create a "config" folder inside the "2.80" folder as you would when creating a portable version of Blender -> Start Blender and open up the shading window in the 3D view and select a matcap/studio
Author

Added subscriber: @ninthjake

Added subscriber: @ninthjake

#58305 was marked as duplicate of this issue

#58305 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-11-28 10:58:42 +01:00
Member

Confirmed, will have a look

Confirmed, will have a look
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht
Member

Hm, after checking, this is true only for portable builds (meaning that you create the config folder inside a locally extracted self contained blender)

That check for portable builds is here .
See also https://docs.blender.org/manual/en/dev/getting_started/installing/configuration/directories.html

If you do it like this, then

  • bpy.utils.user_resource('DATAFILES') / BKE_appdir_folder_id(BLENDER_USER_DATAFILES) will return the same path as the 'builtin' datapath (BKE_appdir_folder_id(BLENDER_SYSTEM_DATAFILES))... it's always LOCAL
  • blender cant really distinguish custom studiolights from the builtin studiolights, with bad consequences:
  • blender shows the builtin ones as custom ones in UserPreferences (you can also deinstall a builtin one and will be deleted without a chance to get it back)
  • blender will go over the same path twice and create sudiolights (as reported here)

That being said, if you put custom studiolights in the datafiles folder in your USER directory (instead of LOCAL -- see the manual again) and remove the config folder from the extracted location again, all should be fine and dandy...

Of course this could be worked around by introducing something like a "USER" folder inside the LOCAL datafiles folder, but I am unsure if this is against design (and worth the effort)

After all, I guess this is somewhat expected behavior and can be closed?
(unless @brecht or @fclem have objections?)

Hm, after checking, this is true only for portable builds (meaning that you create the `config` folder inside a locally extracted self contained blender) That check for portable builds is [here ](https://developer.blender.org/diffusion/B/browse/blender2.8/source/blender/blenkernel/intern/appdir.c;43248164a43fcb7e383854da5afc8b1637b54969$232). See also https://docs.blender.org/manual/en/dev/getting_started/installing/configuration/directories.html If you do it like this, then - `bpy.utils.user_resource('DATAFILES')` / `BKE_appdir_folder_id(BLENDER_USER_DATAFILES)` will return the same path as the 'builtin' datapath (`BKE_appdir_folder_id(BLENDER_SYSTEM_DATAFILES)`)... it's always LOCAL - blender cant really distinguish custom studiolights from the builtin studiolights, with bad consequences: - blender shows the **builtin** ones as **custom** ones in UserPreferences (you can also deinstall a builtin one and will be deleted without a chance to get it back) - blender will go over the same path **twice** and create sudiolights (as reported here) That being said, if you put custom studiolights in the datafiles folder in your `USER` directory (instead of `LOCAL` -- see [the manual ](https://docs.blender.org/manual/en/dev/getting_started/installing/configuration/directories.html) again) and remove the config folder from the extracted location again, all should be fine and dandy... Of course this could be worked around by introducing something like a "USER" folder inside the LOCAL datafiles folder, but I am unsure if this is against design (and worth the effort) After all, I guess this is somewhat expected behavior and can be closed? (unless @brecht or @fclem have objections?)

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Blender should not look in the same folder twice, I would consider that a bug. We just need to check if BLENDER_USER_DATAFILES and BLENDER_SYSTEM_DATAFILES return the same path, and if so only go over it once.

Blender should not look in the same folder twice, I would consider that a bug. We just need to check if `BLENDER_USER_DATAFILES` and `BLENDER_SYSTEM_DATAFILES` return the same path, and if so only go over it once.
Member

Oki, will do

Oki, will do

Added subscriber: @Harvester

Added subscriber: @Harvester

This issue was referenced by 378e5232e8

This issue was referenced by 378e5232e88eb99c40025c681c9b28724a370c0f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58104
No description provided.