Fix T58104: Duplicated previews for Matcaps/HDRIs in portable installs

Reviewers: brecht

Maniphest Tasks: T58104

Differential Revision: https://developer.blender.org/D4028